--- a/conf/bleedingEdge.neon
+++ b/conf/bleedingEdge.neon
@@ -5,5 +5,6 @@ parameters:
 		explicitMixedInUnknownGenericNew: true
 		arrayFilter: true
 		arrayUnpacking: true
+		nodeConnectingVisitorCompatibility: false
 	stubFiles:
 		- ../stubs/bleedingEdge/Countable.stub
